Fixes header spacing

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -8,7 +8,6 @@ input {
 }
 .search {
   /* margin-bottom: 40px; */
-  margin-right: 15px;
   display: inherit;
 }
 
